# endo-semi

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: endo_semi_yolo26.yaml
data/: update_paths.ipynb
data/label-data/v3_2_1/: data.yaml  split.csv  train.txt  val.txt
instruction/: Endo-SemiS_YOLO26_detection_adaptation.md
scripts/: eval.py  infer_video.py  prepare_ssl_split.py  train.py  train_baseline.py
src/endosemi/: __init__.py  config.py
src/endosemi/data/: __init__.py  augment.py  dataset.py  polyp_dataset.py  ssl_split.py
src/endosemi/engine/: __init__.py  baseline.py  evaluator.py  trainer.py
src/endosemi/losses/: __init__.py  cross_supervision.py  joint_pseudo.py  mutual_learning.py  total.py
src/endosemi/matching/: __init__.py  box_match.py
src/endosemi/models/: __init__.py  dual_yolo.py  hyp.py  mc_dropout.py
src/endosemi/temporal/: __init__.py  st_correction.py
src/endosemi/uncertainty/: __init__.py  combine.py  dfl_entropy.py  mc_dropout.py  thresholding.py
src/endosemi/utils/: __init__.py  boxes.py  history.py  logging.py
tests/: test_box_match.py  test_detection_metrics.py  test_joint_pseudo.py  test_ssl_split.py  test_temporal.py  test_thresholding.py  test_uncertainty.py
